Ucitavanje podataka iz baze

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,7 +17,7 @@
   <ion-card>
     <ion-card-header>
       <ion-card-title>{{book.title}}</ion-card-title>
-      <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+      <ion-card-subtitle>Autor: {{book.author}}</ion-card-subtitle>
       <ion-item>
         
       </ion-item>
