Dugme za dodavanje nove knjige

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -35,3 +35,9 @@
   </ion-card>
 </ion-list>
 </ion-content>
+
+<ion-fab vertical="bottom" horizontal="end">
+  <ion-fab-button > <!-- fali funkcija za dodavaje -->
+    <ion-icon name="add">Add</ion-icon>
+  </ion-fab-button>
+</ion-fab>
