--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -2,7 +2,7 @@
 
   <ion-header [translucent]="true">
     <ion-toolbar>
-      <ion-title clas="title" style="font-size: 28px;">Dobrodosli nazad!</ion-title>
+      <ion-title class="title" style="font-size: 28px;">Dobrodosli nazad!</ion-title>
     </ion-toolbar>
   </ion-header>
   
@@ -11,29 +11,30 @@
     <div class="ion-padding">
       <ion-item>
         <ion-input formControlName="email" placeholder="Email"></ion-input>
-        <ion-icon name="person-outline"></ion-icon>
+        <ion-icon name="mail-outline"></ion-icon>
       </ion-item>
       <div *ngIf="this.loginForm.controls?.['email'].touched && this.loginForm.controls?.['email'].invalid">
-        <ion-text > Nije dobar unos email-a! </ion-text>
+        <ion-text class="warning"> Nije dobar unos email-a! </ion-text>
       </div>
       <ion-item>
-        <ion-input formControlName="password" placeholder="Lozinka"></ion-input>
+        <ion-input type="password" formControlName="password" placeholder="Lozinka"></ion-input>
         <ion-icon name="lock-closed-outline"></ion-icon>
       </ion-item>
       <div *ngIf="this.loginForm.controls?.['password'].touched && this.loginForm.controls?.['password'].invalid">
-        <ion-text > Lozinka mora da ima bar jedan karakter, jedno veliko slovo, jedan broj! </ion-text>
+        <ion-text class="warning"> Lozinka mora da ima bar jedan karakter, jedno veliko slovo, jedan broj! </ion-text>
       </div>
-      <div class="forgotPassword">
-        <a [routerLink]="['/reset-password']"> Zaboravljena lozinka?</a>
-      </div>
+
     <div class="signupLink">
       <p> Novi korisnik? <a [routerLink]="['/signup']"> Kreirajte nalog!</a></p>
     </div>
     </div>
-    <ion-fab vertical="bottom" horizontal="end"> 
+    <ion-fab vertical="middle" horizontal="end"> 
       <ion-fab-button (click)="logIn()">
         <ion-icon name="chevron-forward"></ion-icon>
       </ion-fab-button>
     </ion-fab>
+    <div>
+    <ion-img src="assets/images/bookshop.jpg"/>
+  </div>
   </form>
   </ion-content>
