--- a/src/app/signup/signup.page.scss
+++ b/src/app/signup/signup.page.scss
@@ -1,15 +1,27 @@
 .input{
     font-size: 300;
 }
+.title{
+  font-weight: bold;
+  text-align: center;
+  color: black;
+}
 
 ion-item{
-    --background: rgb(206, 199, 199);
-    border-radius: 10px;
+  --background:rgb(235, 235, 203);
+  border-radius: 10px;
     margin-bottom:16px;
 }
 
+.warning{
+  color:rgb(202, 43, 43);
+  font-size:0.9rem;
+  font-style: italic;
+  padding-left: 25px;
+}
+
 .subtitle{
-    font-size:0.9rem;
+    font-size:1.3rem;
     color:gray;
     text-align: center;
 }
@@ -26,11 +38,16 @@ ion-item{
   right: 0;
   justify-content: center;
   p{
-    font-size: 0.9rem;
+    font-size: 1.3rem;
   }
 
   a{
+    font-weight: bold;
     text-decoration: none;
+    color: rgb(220, 184, 93);
+  }
+  a:active{
+    text-decoration: underline;
   }
 }
 
