--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,16 +1,28 @@
 .input{
     font-size: 300;
 }
+.title{
+  font-weight: bold;
+  text-align: center;
+  color: black;
+}
 
 ion-item{
-    --background: rgb(206, 199, 199);
+    --background:rgb(235, 235, 203);
     border-radius: 10px;
     margin-bottom:16px;
 }
 
+.warning{
+  color:rgb(202, 43, 43);
+  font-size:0.9rem;
+  font-style: italic;
+  padding-left: 25px;
+}
+
 .subtitle{
-    font-size:0.9rem;
-    color:gray;
+    font-size:1.3rem;
+    color:rgb(128, 128, 128);
     text-align: center;
 }
 
@@ -26,19 +38,16 @@ ion-item{
   right: 0;
   justify-content: center;
   p{
-    font-size: 0.9rem;
+    font-size: 1.3rem;
   }
 
   a{
+    font-weight: bold;
     text-decoration: none;
+    color: rgb(220, 184, 93);
+  }
+  a:active{
+    text-decoration: underline;
   }
 }
 
-.forgotPassword{
-    justify-content: flex-end;
-    a{
-        font-weight: bold;
-        font-size: 0.9rem;
-        text-decoration: none;
-    }
-}
