--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -2,7 +2,7 @@
 
   <ion-header [translucent]="true">
     <ion-toolbar>
-      <ion-title style="font-size: 28px;" >Dobrodosli!</ion-title>
+      <ion-title class="title" style="font-size: 28px;" >Dobrodošli!</ion-title>
     </ion-toolbar>
   </ion-header>
   
@@ -15,32 +15,33 @@
         <ion-icon name="person-outline"></ion-icon>
       </ion-item>
       <div *ngIf="this.regForm.controls?.['fullname'].touched && this.regForm.controls?.['fullname'].invalid">
-        <ion-text > Ime je obavezno! </ion-text>
+        <ion-text class="warning"> Ime je obavezno! </ion-text>
       </div>
       <br>
       <ion-item>
         <ion-input formControlName="email" class="input" placeholder="Email"></ion-input>
-        <ion-icon name="person-outline"></ion-icon>
+        <ion-icon name="mail-outline"></ion-icon>
       </ion-item>
       <div *ngIf="this.regForm.controls?.['email'].touched && this.regForm.controls?.['email'].invalid">
-        <ion-text > Nije dobar unos email-a! </ion-text>
+        <ion-text class="warning" > Nije dobar unos email-a! </ion-text>
       </div>
       <br>
       <ion-item>
         <ion-input formControlName="password" class="input" placeholder="Lozinka"></ion-input>
-        <ion-icon name="person-outline"></ion-icon>
+        <ion-icon name="lock-closed-outline"></ion-icon>
       </ion-item>
       <div *ngIf="this.regForm.controls?.['password'].touched && this.regForm.controls?.['password'].invalid">
-        <ion-text > Lozinka mora da ima bar jedan karakter, jedno veliko slovo, jedan broj! </ion-text>
+        <ion-text class="warning"> Lozinka mora da ima bar jedan karakter, jedno veliko slovo, jedan broj! </ion-text>
       </div>
     <div class="signinLink">
-      <p> Postojeci korisnik? <a [routerLink]="['/login']"> Prijavite se!</a></p>
+      <p> Postojeći korisnik? <a [routerLink]="['/login']"> Prijavite se!</a></p>
     </div>
     </div>
-    <ion-fab vertical="bottom" horizontal="end"> 
+    <ion-fab vertical="middle" horizontal="end"> 
       <ion-fab-button (click)="signUp()">
         <ion-icon name="chevron-forward"></ion-icon>
       </ion-fab-button>
     </ion-fab>
+    <img src="assets/images/bookshop2.jpg"/>
   </form>
   </ion-content>
