Dodatne izmene izgleda

--- a/src/app/create/create.page.html
+++ b/src/app/create/create.page.html
@@ -12,7 +12,7 @@
   <ion-card>
     <ion-card-content>
       <ion-item>
-        <ion-textarea label="Naslov knjige"  [(ngModel)]="bookTitle"></ion-textarea>
+        <ion-textarea label="Naslov knjige:"  [(ngModel)]="bookTitle"></ion-textarea>
       </ion-item>
       <ion-item>
         <ion-textarea label="Ime autora:"  [(ngModel)]="bookAuthor"></ion-textarea>
