--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -22,7 +22,7 @@
   
     <ion-card-content>
       <b>Kratak opis:</b><br>{{book.description}} <br><br>
-      <b>Cena: </b>{{book.price}}
+      <b style="font-size: 1.7rem;">Cena: {{book.price}} </b>
       <ion-row> 
         <ion-button> Izmeni</ion-button>
         <ion-button (click)="deleteBook(book)"> Izbriši</ion-button>
