--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -42,3 +42,9 @@
     <ion-icon name="book-outline"></ion-icon>
     </ion-fab-button>
 </ion-fab>
+
+<ion-fab vertical="top" horizontal="end">
+  <ion-fab-button (click)="logout()">
+    <ion-icon name="log-out-outline"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
